client/src/sass/main.scss
/* ... */
@import "charts";

.md-modal {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 50%;
  width: 850px;
  height: 505px;
  z-index: 2000;
  visibility: hidden;
  margin: auto;
  top: 0; left: 0; bottom: 0; right: 0;
}

.md-show {
  visibility: visible;
}

.md-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  visibility: hidden;
  top: 0;
  left: 0;
  z-index: 1000;
  opacity: 0;
  background: rgba(0,0,0,0.8);
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.md-show ~ .md-overlay {
  opacity: 1;
  visibility: visible;
}

.md-box {
  color: $mediumGrey;
  background: $white;
  position: relative;
  border-radius: 3px;
  margin: 0 auto;
  font-weight: 300;
  font-size: 1.15em;
}

.md-box .md-title {
  overflow: hidden;
  border-bottom: 1px solid $lightGrey;
  padding: 20px 30px;

}

.md-box h3 {
  color: $mainFont;
  font-size: 1.2em;
  font-weight: 400;
  width: 510px;
  float: left;
}

.md-box .md-content{
  padding: 20px 0 20px 30px;
  overflow: hidden;
  position: relative;
  height: 300px;
}

.md-box .md-content > p {
  width: 425px;
  line-height: 1.6em;
  color: $mainFont;
  font-size: 0.7em;
  font-weight: normal;
  margin-top: 10px;
}

.md-box .md-content .agedi {
  position: relative;
  top: 0;
  right: 0;
  width: 130px;
  height: auto;
  margin-top: 14px;
  margin-right: 10px;
}

.md-box .md-content img {
  position: absolute;
  top: 0;
  right: 0;
  width: 445px;
  height: auto;
}

.md-box .md-buttons{
  margin-top: 10px;
  padding: 20px 30px;
  border-top: 1px solid $lightGrey;
  overflow: hidden;
}

.md-box a.button {
  display: inline;
  margin: 0 auto;
  font-size: 0.8em;

  &.know-more {
    float: left;
  }

  &.md-close {
    float: right;
    color: $white;
    background-color: $buttonBlue;
    border: 1px solid $buttonBlue;
    &:hover {
      color: $white;
      border: 1px solid darken($buttonBlue, 10);
    }
    &:active{
      color: $white;
      background-color: darken($buttonBlue, 10);
      border: 1px solid darken($buttonBlue, 10);
    }
  }

  &.feedback {
      float: right;
      margin-top: 4px;
      display: inline;
      font-size: 0.7em;
      color: $white;
      background-color: $green;
      border: 1px solid $green;
      &:hover {
        color: $white;
        border: 1px solid darken($green, 10);
      }
      &:active{
        color: $white;
        background-color: $greenHover;
        border: 1px solid $greenHover;
      }
    }
}

.md-effect-1 .md-box {
  -webkit-transform: scale(0.7);
  -moz-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  opacity: 0;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s;
}

.md-show.md-effect-1 .md-box {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
}

.action-or-response {
  a {
    cursor: pointer;
  }
}

.section-view {
  overflow: hidden;

  button.delete {
    margin-top: 25px;
    padding-left: 0;
    padding-right: 0;
    border: none;
    position: absolute;
    right: 0;
    top: -6px;
    @include transition(color 0.5s);

    i {
      padding-right: 5px;
    }

    &:hover, &:active {
      background: none;
      color: $red;
      @include transition(color 0.5s);
    }
  }
}

.section-visualisation {
  .legend {
    margin: 5px 0;
    text-align: center;
    padding: 0 10px;

    li {
      display: inline-block;
      margin-left: 5px;
      font-size: 0.7em;
      padding: 0;

      span {
        display: inline-block;
        height: 10px;
        width: 10px;
      }
    }
  }
}

.leaflet-bottom {
  z-index: 2;
}

.leaflet-bar.legend {
  background: white;
  font-size: 1.5em;
  padding: 5px;

  ul {
    text-align: left;
    padding: 0;

    li {
      display: block;

      span.leaflet-marker-icon {
        position: relative;
      }
    }
  }
}

.map-visualisation {
  .leaflet-marker-icon {
    border: 1px solid #000;
    border-radius: 5px;
    background-color: #AAA;
    padding: 0;

    &.not-reported-on {
      color: #fff;
      background-color: #FEC060;
    }
    &.excellent {
      color: #fff;
      background-color: #7BAB3C;
    }
    &.good {
      color: #fff;
      background-color: #9BD84C;
    }
    &.concerning {
      color: #fff;
      background-color: #FEC060;
    }
    &.bad {
      color: #fff;
      background-color: #FD8C2F;
    }
    &.catastrophic {
      color: #fff;
      background-color: #E37100;
    }
  }
  .leaflet-popup-content {
    h3 {
      font-weight: bold;
    }
  }
}

.filters {
  margin: 10px 0 20px;
}

aside {
  .dpsir{
    float: right;

    li {
      font-size: 2em;
    }

    li:hover {
      color: $linkBlueHover;
      cursor: pointer;
    }
  }
}

ul.dpsir {
  overflow: hidden;
  padding: 0;

  li {
    font-weight: bold;
    float: left;
    list-style-type: none;
    padding: 0 5px 0 0;
    opacity: 0.2;
  }

  li.active {
    opacity: 1;
  }
}

